增加状态压缩dp 题解

--- a/笔记/状态压缩Dp/笔记.md
+++ b/笔记/状态压缩Dp/笔记.md
@@ -36,11 +36,11 @@
 16
 ```
 
-####闫氏Dp分析法
+#### 闫氏Dp分析法
 
 ![](../图库/微信截图_20221102114016.png)
 
-####代码
+#### 代码
 
 ``` cpp
 #include <cstring>
@@ -124,6 +124,131 @@ int main()
     return 0;
 
      
+}
+
+```
+
+
+
+### 1.2 AcWing 327. 玉米田
+
+
+#### 题目描述
+
+农夫约翰的土地由 M×N 个小方格组成，现在他要在土地里种植玉米。
+
+非常遗憾，部分土地是不育的，无法种植。
+
+而且，相邻的土地不能同时种植玉米，也就是说种植玉米的所有方格之间都不会有公共边缘。
+
+现在给定土地的大小，请你求出共有多少种种植方法。
+
+土地上什么都不种也算一种方法。
+
+#### 输入格式
+
+第 1 行包含两个整数 M 和 N。
+
+第 2..M+1 行：每行包含 N 个整数 0 或 1，用来描述整个土地的状况，1 表示该块土地肥沃，0 表示该块土地不育。
+
+
+#### 输出格式
+
+输出总种植方法对 10\^8 取模后的值。
+
+#### 数据范围
+
+1≤M,N≤12。
+
+#### 样例 #1
+
+#### 样例输入 #1
+
+```
+2 3
+1 1 1
+0 1 0
+```
+
+#### 样例输出 #1
+
+```
+9
+```
+
+#### 闫氏Dp分析法
+![](../图库/微信截图_20221103115314.png)
+
+#### 代码
+
+```cpp
+#include <iostream>
+#include <vector>
+#include <algorithm>
+
+using namespace std;
+
+const int N = 14, M = 1 << 12, mod = 1e8;
+
+int n,m;
+int g[N];//原有地图记录
+vector<int> state;
+vector<int> head[M];//可以从 M 状态开始转移的状态集合 
+int f[N][M];
+
+bool check(int state)
+{
+    for(int i = 0; i < m; i++)
+    {
+        if((state >> i & 1) && (state >> i+1 & 1)) return false;
+    }
+    return true;
+}
+
+int main()
+{
+    cin >> n >> m;
+    for(int i = 1; i <= n; i++)
+    {
+        for(int j = 0; j < m; j++)
+        {
+            int t;
+            cin >> t;
+            g[i] += !t << j;//原有地图记录（原有1代表能播种，需转换为0，反之亦然）
+        }
+    }
+
+    for(int i = 0; i < 1 << m; i++)
+    {
+        if(check(i)) state.push_back(i);//所有不相邻播种状态
+    }
+
+    for(int i = 0; i < state.size(); i++)
+    {
+        for(int j = 0; j < state.size(); j++)
+        {
+            int a = state[i], b = state[j];
+            if((a & b) == 0)
+                head[i].push_back(j);//所有不相邻播种状态
+        }
+    }
+
+    f[0][0] = 1;
+    for(int i = 1; i <= n+1; i++)
+    {
+        for(int a = 0; a < state.size(); a++)
+        {
+            for(int b : head[a])
+            {
+                if(g[i] & state[a]) continue;//贫瘠土地
+                f[i][a] = (f[i][a] + f[i-1][b]) % mod;
+            }
+        }
+    }
+
+    cout << f[n+1][0] << endl;//多进行一轮
+
+    return 0;
 }
 
 ```
