--- a/笔记/状态压缩Dp/笔记.md
+++ b/笔记/状态压缩Dp/笔记.md
@@ -252,3 +252,230 @@ int main()
 }
 
 ```
+
+
+### 1.3[NOI2001] 炮兵阵地
+
+#### 题目描述
+
+司令部的将军们打算在 $N\times M$ 的网格地图上部署他们的炮兵部队。
+
+一个 $N\times M$ 的地图由 $N$ 行 $M$ 列组成，地图的每一格可能是山地（用 $\texttt{H}$ 表示），也可能是平原（用 $\texttt{P}$ 表示），如下图。
+
+在每一格平原地形上最多可以布置一支炮兵部队（山地上不能够部署炮兵部队）；一支炮兵部队在地图上的攻击范围如图中黑色区域所示：
+
+ ![](https://cdn.luogu.com.cn/upload/pic/1881.png) 
+
+如果在地图中的灰色所标识的平原上部署一支炮兵部队，则图中的黑色的网格表示它能够攻击到的区域：沿横向左右各两格，沿纵向上下各两格。
+
+图上其它白色网格均攻击不到。从图上可见炮兵的攻击范围不受地形的影响。
+
+现在，将军们规划如何部署炮兵部队，在防止误伤的前提下（保证任何两支炮兵部队之间不能互相攻击，即任何一支炮兵部队都不在其他支炮兵部队的攻击范围内），在整个地图区域内最多能够摆放多少我军的炮兵部队。
+
+#### 输入格式
+
+第一行包含两个由空格分割开的正整数，分别表示 $N$ 和 $M$。
+
+接下来的 $N$ 行，每一行含有连续的 $M$ 个字符，按顺序表示地图中每一行的数据。
+
+#### 输出格式
+
+一行一个整数，表示最多能摆放的炮兵部队的数量。
+
+#### 样例 #1
+
+#### 样例输入 #1
+
+```
+5 4
+PHPP
+PPHH
+PPPP
+PHPP
+PHHP
+```
+
+#### 样例输出 #1
+
+```
+6
+```
+
+#### 提示
+
+对于 $100\%$ 的数据，$N\le 100$，$M\le 10$，保证字符仅包含 `P` 与 `H`。
+
+#### 闫氏dp分析法
+
+![](../图库/微信截图_20221104113007.png)
+
+#### 代码
+
+``` cpp
+#include <iostream>
+#include <cstring>
+#include <algorithm>
+#include <vector>
+
+using namespace std;
+
+const int N = 11, M = 1 << 10;
+
+int n, m;
+int g[110];
+vector<int> state,head[M];
+int cnt[M];
+int f[2][M][M];
+
+
+bool check(int state)//判断合法状态
+{
+    for(int i = 0; i < m; i++)
+    {
+        if((state >> i & 1) && ((state >> i + 1 & 1) || (state >> i+2 & 1)))//均不相邻
+            return false;
+    }
+    return true;
+}
+
+int count (int state)//得到炮台个数
+{
+    int res = 0;
+    for(int i = 0; i < m; i++) res += state >> i & 1;
+    return res; 
+}
+
+int main()
+{
+    cin >> n >> m;
+    for(int i = 1; i <= n; i++)//画地图
+    {
+        for(int j = 0; j < m; j++)
+        {
+            char c; 
+            cin >> c;
+            if(c == 'H') g[i] += 1 << j;
+        }
+    }
+
+    for(int st = 0; st < 1 << m; ++st)//得到所有合法状态
+    {
+        if(check(st))
+            state.push_back(st), cnt[st] = count(st);
+    }
+
+    for(int cur : state)
+    {
+        for(int pre : state)
+        {
+            if(!(cur & pre))//前后两行不并行
+                head[cur].push_back(pre);
+        }
+    }
+
+    for(int i = 1; i <= n+2; ++i)//得到前n+2行数据
+    {
+        for(int st : state)
+        {
+            if(!(g[i] & st))
+            {
+                for(int p1 : head[st])
+                {
+                    for(int p2 : head[p1])
+                    {
+                        if(!(st & p2))//隔行不并行
+                        {
+                            f[i & 1][st][p1] = max(f[i & 1][st][p1] , f[i-1 & 1][p1][p2] + cnt[st]);//滚动数组优化
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    cout << f[n+2 &1][0][0];//输出
+    return 0;
+}
+```
+
+##  2. 集合
+
+### 2.1 AcWing 91.最短Hamilton距离
+给定一张 n 个点的带权无向图，点从 0∼n−1 标号，求起点 0 到终点 n−1 的最短 Hamilton 路径。
+
+Hamilton 路径的定义是从 0 到 n−1 不重不漏地经过每个点恰好一次。
+
+#### 输入格式
+第一行输入整数 n。
+
+接下来 n 行每行 n 个整数，其中第 i 行第 j 个整数表示点 i 到 j 的距离（记为 a[i,j]）。
+
+对于任意的 x,y,z，数据保证 a[x,x]=0，a[x,y]=a[y,x] 并且 a[x,y]+a[y,z]≥a[x,z]。
+
+#### 输出格式
+输出一个整数，表示最短 Hamilton 路径的长度。
+
+#### 数据范围
+
+1≤n≤20
+0≤a[i,j]≤107
+
+#### 输入样例：
+```
+5
+0 2 4 5 1
+2 0 6 5 3
+4 6 0 8 3
+5 5 8 0 5
+1 3 3 5 0
+```
+#### 输出样例：
+```
+18
+```
+#### 闫氏Dp分析法
+![](../图库/42785_4f9319bcdf-QQ浏览器截图20200816153106.png)
+
+#### 代码
+```cpp
+#include <iostream>
+#include <cstring>
+
+using namespace std;
+
+const int N = 20, M = 1 << N;
+int f[M][N], w[N][N];
+
+int main()
+{
+    int n;
+    cin >> n;
+    for(int i = 0; i < n; i++)
+    {
+        for(int j = 0; j < n; j++)
+        {
+            cin >> w[i][j];//输入权重
+        }
+    }
+
+    memset(f, 0x3f, sizeof(f));//属性min 需要初始化max
+    f[1][0] = 0;//起始点
+    for(int i = 1; i < 1 << n; i++)
+    {
+        for(int j = 0; j < n; j++)//遍历是f[i][j]
+        {
+            if(i >> j & 1)// i里有j的情况
+                for(int k = 0; k < n; k++)
+                {
+                    if(i - (1 << j) >> k & 1)// 去掉j后 k需要仍在
+                        f[i][j] = min(f[i][j], f[i - (1 << j)][k] + w[k][i]);
+                }
+        }
+    }
+
+    cout << f[(1 << n) - 1][n-1] << endl;//输出结果
+    return 0;
+}
+
+
+```
