--- a/笔记/状态压缩Dp/笔记.md
+++ b/笔记/状态压缩Dp/笔记.md
@@ -476,6 +476,342 @@ int main()
     cout << f[(1 << n) - 1][n-1] << endl;//输出结果
     return 0;
 }
+```
+### 2.2 AcWing 731. 毕业旅行问题
 
+小明目前在做一份毕业旅行的规划。
 
+打算从北京出发，分别去若干个城市，然后再回到北京，每个城市之间均乘坐高铁，且每个城市只去一次。
+
+由于经费有限，希望能够通过合理的路线安排尽可能的省些路上的花销。
+
+给定一组城市和每对城市之间的火车票的价钱，找到每个城市只访问一次并返回起点的最小车费花销。
+
+注意：北京为 1 号城市。
+
+#### 输入格式
+城市个数 n。
+
+城市间的车票价钱 n 行 n 列的矩阵 m[n][n]。
+
+#### 输出格式
+输出一个整数，表示最小车费花销。
+
+#### 数据范围
+1<n≤20,包括北京
+车票价格均不超过 1000 元。
+
+#### 输入样例：
+```
+4
+0 2 6 5
+2 0 4 4
+6 4 0 2
+5 4 2 0
+```
+#### 输出样例：
+ ```
+ 13
+ ```
+
+#### 说明
+共 4 个城市，城市 1 和城市 1 的车费为 0，城市 1 和城市 2 之间的车费为 2，城市 1 和城市 3 之间的车费为 6，城市 1 和城市 4 之间的车费为 5，以此类推。
+
+假设任意两个城市之间均有单程票可买，且价格均在 1000 元以内，无需考虑极端情况。
+
+#### 闫氏Dp分析法
+同 AcWing 91.最短Hamilton距离
+
+#### 代码
+```cpp
+#include <iostream>
+#include <cstring>
+
+using namespace std;
+
+const int N = 20, M = 1 << N;
+int f[M][N], w[N][N], n;
+
+int main()
+{
+    cin >> n;
+    for(int i = 0; i < n; i++)
+    {
+        for(int j = 0; j < n; j++)
+        {
+            cin >> w[i][j]; 
+        }
+    }
+
+    memset(f, 0x3f, sizeof(f));
+    f[1][0] = 0;
+    for(int i = 1; i < 1 << n; i++)
+    {
+        for(int j = 0; j < n; j++)
+        {
+            if(i >> j & 1)
+            {
+                for(int k = 0; k < n; k++)
+                {
+                    if(i - (1 << j) >> k & 1)
+                    {
+                        f[i][j] = min(f[i - (1 << j)][k] + w[k][j], f[i][j]);
+                    }
+                }
+            }
+        }
+    }
+    int ans = 0x3f3f3f3f;
+    for(int k = 1; k < n; k++) ans = min(f[(1 << n) - 1][k] + w[k][0], ans);
+    cout << ans;
+    return 0;
+}
+```
+
+### 2.3 [NOIP2016 提高组] 愤怒的小鸟
+
+#### 题目描述
+
+`Kiana` 最近沉迷于一款神奇的游戏无法自拔。
+
+简单来说，这款游戏是在一个平面上进行的。
+
+有一架弹弓位于 $(0,0)$ 处，每次 `Kiana` 可以用它向第一象限发射一只红色的小鸟，小鸟们的飞行轨迹均为形如 $y=ax^2+bx$ 的曲线，其中 $a,b$ 是` Kiana` 指定的参数，且必须满足 $a < 0$，$a,b$ 都是实数。
+
+当小鸟落回地面（即 $x$ 轴）时，它就会瞬间消失。
+
+在游戏的某个关卡里，平面的第一象限中有 $n$ 只绿色的小猪，其中第 $i$ 只小猪所在的坐标为 $\left(x_i,y_i \right)$。
+
+如果某只小鸟的飞行轨迹经过了 $\left( x_i, y_i \right)$，那么第 $i$ 只小猪就会被消灭掉，同时小鸟将会沿着原先的轨迹继续飞行；
+
+如果一只小鸟的飞行轨迹没有经过 $\left( x_i, y_i \right)$，那么这只小鸟飞行的全过程就不会对第 $i$ 只小猪产生任何影响。
+
+例如，若两只小猪分别位于 $(1,3)$ 和 $(3,3)$，`Kiana` 可以选择发射一只飞行轨迹为 $y=-x^2+4x$ 的小鸟，这样两只小猪就会被这只小鸟一起消灭。
+
+而这个游戏的目的，就是通过发射小鸟消灭所有的小猪。
+
+这款神奇游戏的每个关卡对 `Kiana `来说都很难，所以` Kiana `还输入了一些神秘的指令，使得自己能更轻松地完成这个游戏。这些指令将在【输入格式】中详述。
+
+假设这款游戏一共有 $T$ 个关卡，现在 `Kiana `想知道，对于每一个关卡，至少需要发射多少只小鸟才能消灭所有的小猪。由于她不会算，所以希望由你告诉她。
+
+#### 输入格式
+
+第一行包含一个正整数 $T$，表示游戏的关卡总数。
+
+下面依次输入这 $T$ 个关卡的信息。每个关卡第一行包含两个非负整数 $n,m$，分别表示该关卡中的小猪数量和 Kiana 输入的神秘指令类型。接下来的 $n$ 行中，第 $i$ 行包含两个正实数 $x_i,y_i$，表示第 $i$ 只小猪坐标为 $(x_i,y_i)$。数据保证同一个关卡中不存在两只坐标完全相同的小猪。
+
+如果 $m=0$，表示` Kiana `输入了一个没有任何作用的指令。
+
+如果 $m=1$，则这个关卡将会满足：至多用 $\lceil n/3 + 1 \rceil$ 只小鸟即可消灭所有小猪。
+
+如果 $m=2$，则这个关卡将会满足：一定存在一种最优解，其中有一只小鸟消灭了至少 $\lfloor n/3 \rfloor$ 只小猪。
+
+保证 $1\leq n \leq 18$，$0\leq m \leq 2$，$0 < x_i,y_i < 10$，输入中的实数均保留到小数点后两位。
+
+上文中，符号 $\lceil c \rceil$ 和 $\lfloor c \rfloor$ 分别表示对 $c$ 向上取整和向下取整，例如：$\lceil 2.1 \rceil = \lceil 2.9 \rceil = \lceil 3.0 \rceil = \lfloor 3.0 \rfloor = \lfloor 3.1 \rfloor = \lfloor 3.9 \rfloor = 3$。
+
+#### 输出格式
+
+对每个关卡依次输出一行答案。
+
+输出的每一行包含一个正整数，表示相应的关卡中，消灭所有小猪最少需要的小鸟数量。
+
+#### 样例 #1
+
+#### 样例输入 #1
+
+```
+2
+2 0
+1.00 3.00
+3.00 3.00
+5 2
+1.00 5.00
+2.00 8.00
+3.00 9.00
+4.00 8.00
+5.00 5.00
+```
+
+#### 样例输出 #1
+
+```
+1
+1
+```
+
+#### 样例 #2
+
+#### 样例输入 #2
+
+```
+3
+2 0
+1.41 2.00
+1.73 3.00
+3 0
+1.11 1.41
+2.34 1.79
+2.98 1.49
+5 0
+2.72 2.72
+2.72 3.14
+3.14 2.72
+3.14 3.14
+5.00 5.00
+```
+
+#### 样例输出 #2
+
+```
+2
+2
+3
+```
+
+#### 样例 #3
+
+#### 样例输入 #3
+
+```
+1
+10 0
+7.16 6.28
+2.02 0.38
+8.33 7.78
+7.68 2.09
+7.46 7.86
+5.77 7.44
+8.24 6.72
+4.42 5.11
+5.42 7.79
+8.15 4.99
+```
+
+#### 样例输出 #3
+
+```
+6
+```
+
+#### 提示
+
+【样例解释1】
+
+这组数据中一共有两个关卡。
+
+第一个关卡与【问题描述】中的情形相同，$2$只小猪分别位于$(1.00,3.00)$和 $(3.00,3.00)$，只需发射一只飞行轨迹为$y = -x^2 + 4x$的小鸟即可消灭它们。
+
+第二个关卡中有$5$只小猪，但经过观察我们可以发现它们的坐标都在抛物线 $y = -x^2 + 6x$上，故`Kiana`只需要发射一只小鸟即可消灭所有小猪。
+
+【数据范围】
+
+| 测试点编号 |   $n\leqslant$ |   $m=$ |  $T\leqslant$ |
+| :----------: | :----------: | :----------: | :----------: |
+|   $1$ |   $2$ |   $0$ |  $10$ |
+|   $2$ |   $2$ |   $0$ |  $30$ |
+|   $3$ |   $3$ |   $0$ |  $10$ |
+|   $4$ |   $3$ |   $0$ |  $30$ |
+|   $5$ |   $4$ |   $0$ |  $10$ |
+|   $6$ |   $4$ |   $0$ |  $30$ |
+|   $7$ |   $5$ |   $0$ |  $10$ |
+|   $8$ |   $6$ |   $0$ |  $10$ |
+|   $9$ |   $7$ |   $0$ |  $10$ |
+|   $10$ |   $8$ |   $0$ |  $10$ |
+|   $11$ |   $9$ |   $0$ |  $30$ |
+|   $12$ |   $10$ |   $0$ |  $30$ |
+|   $13$ |   $12$ |   $1$ |  $30$ |
+|   $14$ |   $12$ |   $2$ |  $30$ |
+|   $15$ |   $15$ |   $0$ |  $15$ |
+|   $16$ |   $15$ |   $1$ |  $15$ |
+|   $17$ |   $15$ |   $2$ |  $15$ |
+|   $18$ |   $18$ |   $0$ |  $5$ |
+|   $19$ |   $18$ |   $1$ |  $5$ |
+|   $20$ |   $18$ |   $2$ |  $5$ |
+
+#### 闫氏Dp分析法
+![](../图库/愤怒1.png)
+![](../图库/愤怒2.png)
+
+#### 代码 
+```cpp
+#include <iostream>
+#include <cstring>
+#include <algorithm>
+#include <cmath>
+
+using namespace std;
+
+typedef pair<double, double> PDD;
+
+const int N = 18, M = 1 << N;
+const double eps = 1e-6;
+
+PDD q[N];
+int path[N][N], f[M], T, n, m;//path记录通过i j 的抛物线所经过的所有点
+
+bool cmp(double a, double b)
+{
+    if(fabs(a-b) < eps) return true;
+    return false;
+}
+
+int main()
+{
+    cin >> T;
+    while (T--)
+    {
+        cin >> n >> m;
+        for(int i = 0; i < n; i++)
+        {
+            cin>> q[i].first >> q[i].second;
+        }
+
+        memset(path, 0, sizeof(path));
+        for(int i = 0; i < n; i++)
+        {
+            path[i][i] = 1 << i;
+            for(int j = 0; j < n; j++)
+            {
+                double x1 = q[i].first, y1 = q[i].second, x2 = q[j].first, y2 = q[j].second;
+
+                //计算抛物线
+                if(cmp(x1, x2)) continue;
+                double a = (y1/x1-y2/x2)/(x1 - x2);
+                double b = (y1/x1 - a * x1);
+                if(a > 0 || cmp(a, 0.0)) continue; // 需要a < 0
+
+                //计算path[i][j] 覆盖点状态
+                for(int k = 0; k < n; k++)
+                {
+                    double x = q[k].first, y = q[k].second;
+                    if(cmp(a*x*x+ b*x, y)) path[i][j] += 1 << k;
+                }  
+            }
+        }
+
+        memset(f, 0x3f, sizeof(f));
+        f[0] = 0;
+        for(int i = 0; i < 1 << n; i++)
+        {
+            int x = 0;
+            for(int j = 0; j < n; j++)
+            {
+                if(i >> j & 1) continue;
+                x = j;
+                break;
+            }
+
+            for(int k = 0; k < n; k++)//通过没经过的点x 和 其他任意一点的抛物线
+            {
+                f[i | path[x][k]] = min(f[i | path[x][k]], f[i] + 1);
+            }
+
+        }
+
+        cout << f[(1 << n) - 1] << endl;//全部通过
+    }
+
+    return 0;
+}
 ```
