整理背包问题

--- a/笔记/背包问题.md
+++ b/笔记/背包问题.md
@@ -776,14 +776,14 @@ const int N = 110;
 
 int n, m, root;
 int h[N], e[N], ne[N], idx;
-/*h数组是邻接表的标它的下表是当前节点的标号，值是当前结点第一条边的编号（其实是最后加入的那一条边），e数组是边的集合，它的下标是当前边的编号，数值是当前边的终点；
+/*h数组的下标是当前节点的标号，值是当前结点第一条边的编号（其实是最后加入的那一条边），e数组是边的集合，它的下标是当前边的编号，数值是当前边的终点；
 ne是nextedge，如果ne是-1表示当前结点没有下一条边，ne的下标是当前边的编号，数值是当前结点的下一条边的编号，idx用于保存每一条边的上一条边的编号。
 这样我们就知道了当前结点的第一条边是几，这个边的终点是那个结点，该节点的下一条边编号是几，那么邻接表就完成了
 */ 
 int v[N], w[N];
 int f[N][N];
 
-void add(int a, int b)
+void add(int a, int b)//将b加到a中构建邻接表
 {
     e[idx] = b, ne[idx] = h[a], h[a] = idx++;
 }
